//In the name of Allah

syntax = "proto3";

package city_proto;

service CityService {
  rpc GetCity (GetCityRequest) returns (GetCityResponse);
  rpc GetCities (GetCitiesRequest) returns (GetCitiesResponse);
  rpc CreateCity (CreateCityRequest) returns (CreateCityResponse);
  rpc UpdateCity (UpdateCityRequest) returns (UpdateCityResponse);
  rpc DeleteCity (DeleteCityRequest) returns (DeleteCityResponse);
}

message GetCityRequest {
  int32 id = 1;
}

message GetCityResponse {
  CityMessage city = 1;
}

message GetCitiesRequest {}

message GetCitiesResponse {
  repeated CityMessage cities = 1;
}

message CreateCityRequest {
  string name = 1;
}

message CreateCityResponse {
  CityMessage city = 1;
}

message UpdateCityRequest {
  int32 id = 1;
  string name = 2;
}

message UpdateCityResponse {
  CityMessage city = 1;
}

message DeleteCityRequest {
  int32 id = 1;
}

message DeleteCityResponse {}

message CityMessage {
  int32 id = 1;
  string name = 2;
}